# infopen-pre-commit-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pyup.yml  .travis.yml  Dockerfile  README.md  docker-compose.yml  requirements.txt  setup.cfg  setup.py  tox.ini
infopen_pre_commit_hooks/: __init__.py  check_git_commit_message.py  check_rst.py
testing/: util.py
testing/resources/: bad_commit_line_with_invalid_prefix.txt  bad_commit_line_with_invalid_size.txt  bad_commit_line_without_empty_line.txt  bad_commit_line_without_prefix.txt  bad_rst.rst  ok_commit_line_with_valid_prefix.txt  ok_rst.rst
tests/: test_check_git_commit_message.py  test_check_rst.py
