[bumpversion]
current_version = 0.1.0.a1
commit = True
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(.(?P<build>\w?\d+))?
serialize =
    {major}.{minor}.{patch}.{build}
    {major}.{minor}.{patch}
tag = True

[bumpversion:file:setup.cfg]
[bumpversion:file:VERSION]
[bumpversion:file:infopen_pre_commit_hooks/__init__.py]


[doc]
source-dir = docs/
build-dir = docs/_build
all_files = 1


[metadata]
name = infopen_pre_commit_hooks
version = 0.1.0.a1
description = Infopen out-of-the-box hooks for pre-commit.
long_description = file: README.rst, CHANGELOG.rst, LICENSE
author = Alexandre Chaussier
author_email = a.chaussier@infopen.pro
keywords = Infopen
license = MIT license
url = https://github.com/infOpen/pre-commit-hooks
classifiers =
    License :: OSI Approved :: MIT license
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving :: Packaging


[options]
zip_safe = False
include_package_data = True
install_requires =
    autopep8==1.3.5
    flake8==3.5.0
    pyyaml==3.12.0
    restructuredtext_lint==1.1.3
    six==1.11.0
setup_requires =
    bump2version==0.5.7
    gitchangelog==3.0.3
    pre-commit==1.8.2
    setuptools==39.0.1
    Sphinx==1.7.2
    pytest-runner==4.2.0
tests_require =
    coverage==3.7.1
    pytest==3.5.0
    pytest-cov==2.5.1
    pytest-pylint==0.9.0
    tox==2.9.1


[options.entry_points]
console_scripts =
    check-rst = infopen_pre_commit_hooks.check_rst:check_rst


[options.package_data]


[options.packages.find]
exclude =
    tests*
    testing*


[tool:pytest]
addopts =
    --doctest-modules
    --cov
    --cov-report html
    --cov-report term
    --cov-report xml
    --junit-xml=reports/junit.xml
    --pylint
    --verbose
python_files = test*/**/*.py
testpaths = project_slug tests


[wheel]
universal = True
