[bumpversion]
current_version = 0.1.2
commit = True
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(.(?P<build>\w?\d+))?
serialize =
    {major}.{minor}.{patch}.{build}
    {major}.{minor}.{patch}
tag = True

[aliases]
test = pytest

[bumpversion:file:setup.cfg]

[bumpversion:file:VERSION]

[bumpversion:file:infopen_pre_commit_hooks/__init__.py]

[coverage:run]
branch = True
source = .
omit =
    .eggs/*
    .tox/*
    setup.py

[coverage:report]
fail_under = 100
show_missing = True
skip_covered = True
exclude_lines =
    \#\s*pragma: no cover

    ^\s*raise AssertionError\b
    ^\s*raise NotImplementedError\b
    ^\s*return NotImplemented\b
    ^\s*raise$

    ^if __name__ == ['"]__main__['"]:$

[coverage:html]
directory = reports/coverage-html

[doc]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[metadata]
name = infopen_pre_commit_hooks
version = 0.1.0.a1
description = Infopen out-of-the-box hooks for pre-commit.
long_description = file: README.rst, CHANGELOG.rst, LICENSE
author = Alexandre Chaussier
author_email = a.chaussier@infopen.pro
keywords = Infopen
license = MIT license
url = https://github.com/infOpen/pre-commit-hooks
classifiers =
    License :: OSI Approved :: MIT license
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving :: Packaging

[options]
zip_safe = False
include_package_data = True
install_requires =
    restructuredtext_lint==1.1.3
    six==1.11.0
setup_requires =
    bump2version==0.5.7
    gitchangelog==3.0.3
    pre-commit==1.8.2
    pre-commit-hooks==1.2.3
    setuptools==39.0.1
    Sphinx==1.7.2
    pytest-runner==4.2.0
tests_require =
    coverage==4.5.1
    pytest==3.5.0
    pytest-cov==2.5.1
    pytest-pylint==0.9.0
    tox==3.0.0

[options.entry_points]
console_scripts =
    check-rst = infopen_pre_commit_hooks.check_rst:check_rst

[options.package_data]

[options.packages.find]
exclude =
    tests*
    testing*

[tool:pytest]
addopts =
    --doctest-modules
    --cov=infopen_pre_commit_hooks
    --cov-report html:reports/coverage-html
    --cov-report term
    --cov-report xml:reports/coverage.xml
    --junit-xml=reports/junit.xml
    --pylint
    --verbose
    --verbose
    --verbose
ignore =
    .eggs
    .tox
    setup.py
python_files = test*/*.py
testpaths = infopen_pre_commit_hooks tests

[wheel]
universal = True
